# telephonIA

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  codecov.yml  pyproject.toml  telephonIA.spec
.github/workflows/: build-windows.yml  ci.yml  release.yml
docs/: DEPLOIEMENT_WINDOWS.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: FAQ.jsx  GenerateButton.jsx  Header.jsx  MessageCard.jsx  MusicUpload.jsx  VoiceSelector.jsx
macos/: AppIcon.icns  build_macos.sh  create_dmg.sh  py2app_setup.py
macos/TelephonIA/: Info.plist  main.swift
scripts/: build_bundle.py  build_frontend.sh  build_windows.bat  g729towav.sh
scripts/icons/: generate_icons.py
src/telephonia/: __init__.py  config.py  converter.py  generator.py  mixer.py  paths.py  tts.py  tts_provider.py
src/telephonia/web/: __init__.py  api.py  app.py  middleware.py
tests/: test_bundle_paths.py  test_config.py  test_converter.py  test_generator.py  test_middleware.py  test_mixer.py  test_paths.py  test_tts.py  test_tts_provider.py  test_tts_retry.py  test_web_api.py
