[tool.poetry]
name = "telephonia"
version = "0.1.0"
description = "Generateur de bandes sonores SVI (Serveur Vocal Interactif) par IA via ElevenLabs"
authors = ["stephanejouve <stephanejouve@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telephonia", from = "src"}]

[tool.poetry.scripts]
telephonia = "telephonia.generator:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = ">=2.31"
pydub = ">=0.25"
keyring = ">=25.0"
audioop-lts = {version = ">=0.2.1", python = ">=3.13"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
black = ">=24.0"
ruff = ">=0.4"
isort = ">=5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
